Develop gallery formatting and fix scrollbar jank

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,6 +34,8 @@ body {
     background-image: url("../img/bricks-background.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    overflow-y: scroll;
 }
 
 html, body {
@@ -41,7 +43,7 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100vw;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   height: 100vh;
 }
 
@@ -50,8 +52,8 @@ header {
   position: fixed;
   top: 0;
   width: 1905px;
-  z-index: 100;
   padding: 1rem 2rem;
+  z-index: 1001;
 }
 
 nav ul {
@@ -59,6 +61,7 @@ nav ul {
   justify-content: center;
   gap: 2rem;
   list-style: none;
+
 }
 
 nav a {
@@ -68,6 +71,7 @@ nav a {
   position: relative;
   font-family: 'Rafika', system-ui, sans-serif;
   font-size: 24px;
+  z-index: 1001;
 }
 
 nav a::after {
@@ -103,14 +107,15 @@ p {
 
 span {
     font-family: 'Rafika', system-ui, sans-serif;
-        font-size: 24px;
+    font-size: 24px;
+
 }
 
 /* === Page Sections === */
 main {
   padding-top: 80px; /* space for fixed header */
   /* height: 100vh; */
-  overflow: auto;
+  overflow-y: scroll;
 }
 
 .page-section {
@@ -133,6 +138,30 @@ main {
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
+
+}
+
+.fade-wrapper {
+  position: relative;
+}
+
+.fade-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100px;
+  width: 100%;
+  pointer-events: none;
+  z-index: 1000;
+    background-image: url("../img/bricks-background.png");
+
+  /* This will mask anything beneath it */
+  mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+  -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+  mask-mode: alpha;
+  -webkit-mask-mode: alpha;
+  mask-repeat: no-repeat;
+  -webkit-mask-repeat: no-repeat;
 }
 
 .row {
@@ -145,10 +174,9 @@ main {
 .brick {
   width: 480px;
   height: 240px;
-
   position: relative;
   flex-shrink: 0;
-    scrollbar-gutter: stable;
+  transition: opacity 0.3s ease;
 }
 
 .brick img {
@@ -176,7 +204,11 @@ main {
   filter: grayscale(0%);
   transform: scale(1.05);
   box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-    opacity: 1;
+  opacity: 1 !important;
+}
+
+.brick:hover {
+  opacity: 1 !important;
 }
 
 /* Dim others */
@@ -202,7 +234,7 @@ main {
   display: none;
   justify-content: center;
   align-items: center;
-  z-index: 999;
+  z-index: 1002;
 }
 
 .modal.show {
